--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -48,7 +48,7 @@
         </li>
     </ul>
     
-    <a href="/wordpress/">Please, check out here for further details.</a>
+    <a href="/wordpress/?page_id=2">Please, check out here for further details.</a>
 </div>  
 
 <div class="registration-form">
