--- a/application/views/scripts/partials/object-edit/open-user.phtml
+++ b/application/views/scripts/partials/object-edit/open-user.phtml
@@ -1,28 +1,3 @@
-<div class="panel">
-    <form id="user-form">
-        <label for="userName"><?php echo $this->translate('name');?></label>
-        <input type="text" id="userName" name="userName" placeholder="<?php echo $this->translate('name');?>" value="<?php echo $this->objects['user']->userName;?>"/>
-        <?php 
-            if (!empty($this->objects['nodes'])){
-                echo '<label for="_nodeId">' . $this->translate('deptmnt') . '</label>' . PHP_EOL;
-                echo '<select id="_nodeId">' . PHP_EOL;
-                echo '<option disabled>' . $this->translate('deptmnt') . '</option>' . PHP_EOL;
-                foreach ($this->objects['nodes'] as $node){
-                    echo '<option value="' . $node->nodeId . '" ' . ($node->nodeId == $this->objects['nodeId']? 'selected': '') . '>' . $node->nodeName . '</option>' . PHP_EOL;
-                }
-                echo '</select>' . PHP_EOL;
-            }
-            if (!empty($this->objects['positions'])){
-                echo '<label for="_positionId">' . $this->translate('position') . '</label>' . PHP_EOL;
-                echo '<select id="_positionId">' . PHP_EOL;
-                echo '<option disabled>' . $this->translate('position') . '</option>' . PHP_EOL;
-                foreach ($this->objects['positions'] as $position){
-                    echo '<option value="' . $node->nodeId . '" ' . ($position->positionId == $this->objects['positionId']? 'selected': '') . '>' . $position->positionName . '</option>' . PHP_EOL;
-                }
-                echo '</select>' . PHP_EOL;
-            }
-            
-        ?>
-    </form>
-    
-</div>
+<?php
+
+echo $this->form;
