--- a/application/views/scripts/partials/object-edit/open-node.phtml
+++ b/application/views/scripts/partials/object-edit/open-node.phtml
@@ -16,47 +16,5 @@
     });
     
 </script>
-<div id="result-message"></div>
-<div class="panel">
-    <form id="node-form">
-        <div>
-            <label for="_nodeName"><?php echo $this->translate('node name');?></label>
-            <input type="text" id="_nodeName" name="_nodeName" value="<?php echo $this->objects['node']->nodeName; ?>" placeholder="<?php echo $this->translate('deptmnt'); ?>"></div>
-        <?php
-        if ($this->objects['nodes']) {
-            echo '<label for="_parentnodeId">' . $this->translate('parent node') .'</label>' . PHP_EOL;
-            echo '<select id="_parentnodeId" name="_parentNodeId">' . PHP_EOL;
-            echo '<option disabled>' . $this->translate('parent node') . '</option>' . PHP_EOL;
-            echo '<option value="-1">' . $this->translate('no parent') . '</option>' . PHP_EOL;
-            $selected = '';
-            foreach ($this->objects['nodes'] as $node) {
-                // Exclude from the list current node - we don't want node to parent to itself
-                if ($node->nodeId != $this->objects['node']->nodeId) {
-                    // If node has parent we make this option selected
-                    $selected = ($node->nodeId == $this->objects['node']->parentNodeId) ? 'selected' : '';
-                    echo "<option value='$node->nodeId' $selected>$node->nodeName</option>" . PHP_EOL;
-                }
-            }
-            echo '</select>' . PHP_EOL;
-        }
-        $selected = '';
-        if ($this->objects['scenarios']) {
-            echo '<label for="_scenarioId">' . $this->translate('scenario') . '</label>' . PHP_EOL;
-            echo '<select id="_scenarioId" name="_scenarioId">' . PHP_EOL;
-            echo '<option disabled>' . $this->translate('scenario') . '</option>' . PHP_EOL;
-            echo '<option value="-1">No scenario</option>' . PHP_EOL;
-            foreach ($this->objects['scenarios'] as $scenario) {
-                if (!empty($this->objects['assignment'])) {
-                    $selected = ($scenario->scenarioId == $this->objects['assignment']->scenarioId) ? 'selected' : '';
-                }
-                echo "<option value='$scenario->scenarioId' $selected >$scenario->scenarioName</option>" . PHP_EOL;
-            }
-            echo '</select>' . PHP_EOL;
-        }
-        ?>
-        <input type="hidden" id="_nodeId" name="_nodeId" value="<?php echo $this->objects['node']->nodeId; ?>">
-        <input type="hidden" id="objectType" name="objectType" value="node">
-    </form>
 
-    <button id="update-node-btn">Update</button>
-</div>
+<?php echo $this->form; ?>
