Continue cleaning after switching to Zend_Forms

--- a/application/views/scripts/objects/edit-object.phtml
+++ b/application/views/scripts/objects/edit-object.phtml
@@ -1,3 +1,3 @@
 <?php 
-
-    echo $this->partial('partials/object-edit/'.$this->partialFile, array('objects'=>$this->objects));
+echo $this->form;
+//    echo $this->partial('partials/object-edit/'.$this->partialFile, array('objects'=>$this->objects));
