--- a/application/views/scripts/objects/open-object.phtml
+++ b/application/views/scripts/objects/open-object.phtml
@@ -1,6 +1,6 @@
 <div class="object-list">
     <?php
-    echo $this->partial('partials/object-edit/' . $this->partialFile, array('form' => $this->form));
+    echo $this->form;
     ?>
 </div>
 <div class="object-help">
